--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -10,7 +10,7 @@
     "MD009": true,
     "MD010": true,
     "MD012": true,
-    "MD013": true,
+    "MD013": {"line_length": 150},
     "MD014": true,
     "MD018": true,
     "MD019": true,
