--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
         run: npm install -g markdownlint-cli
 
       - name: Run markdownlint
-        run: markdownlint "docs/adr/*.md"
+        run: markdownlint --rules markdownlint-custom-rules.js "./docs/adr/*.md"
