allow Links heading after Resources heading

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -222,7 +222,8 @@
       "## Considered Options",
       "## Decision Outcome",
       "*",
-      "## Resources"
+      "## Resources",
+      "*"
     ],
     // Match case of headings
     "match_case": false
