follow template structure

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -222,8 +222,7 @@
       "## Considered Options",
       "## Decision Outcome",
       "*",
-      "## Resources",
-      "*"
+      "## Resources"
     ],
     // Match case of headings
     "match_case": false
